Dashboard crud operations

--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,8 @@
   /*
  *Admin CSS ends
  */
+
+ .tox-notification.tox-notification--in.tox-notification--warning {
+  display: none;
+  visibility: hidden;
+}
