--- a/admin/css/admin-panel.css
+++ b/admin/css/admin-panel.css
@@ -258,8 +258,12 @@ button.add-new-recipe-btn.edit-button a {
     justify-content: space-between;
 }
 
-.form-group input, .form-group textarea, .form-group select {
+.form-group input, .form-group textarea, .form-group select, .form-group .image-container {
     width: 70%;
+}
+
+.form-group span.image-container {
+    display: flex;
 }
 
 .tox.tox-tinymce {
