--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,8 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin-right: 20px;
+    /* margin-right: 20px; */
+    padding: 10px;
 }
 
 nav ul li a {
@@ -171,4 +172,32 @@ h1.site-logo {
     background-color: #fff;
     border-radius: 10px;
     padding: 5px 10px;
+}
+
+/* Dropdown styles */
+.dropdown {
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 470px;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdown-content {
+    display: flex;
+    flex-wrap: wrap;
+    /* max-width: 130px; */
+    /* left: -100%; */
+    justify-content: space-evenly;
 }
