Home page issue resolve

--- a/css/styles.css
+++ b/css/styles.css
@@ -310,10 +310,20 @@ form.searchbar {
 .home-user-dashboard .login-success-message {
     background-color: #dff0d8;
     color: #3c763d;
-    padding: 10px;
+    padding: 10px 60px;
     border-radius: 5px;
     display: block;
     margin-bottom: 20px;
+    position: absolute;
+    width: fit-content;
+    text-align: center;
+    z-index: 9999;
+    top: 0px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    box-shadow: 0 2px 8px #ddd;
+    font-weight: 600;
 }
 
 .home-user-dashboard .user-dashboard {
