--- a/admin/admin-styles.css
+++ b/admin/admin-styles.css
@@ -101,3 +101,11 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
+
+.row.align-items-center {
+  height: 90vh;
+}
+
+.container-fluid {
+  height: 90vh;
+}
