--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,71 @@ header {
   color: #fff;
   padding: 20px;
 }
-
+header.row.align-items-center {
+  justify-content: space-evenly;
+}
+form.searchbar {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  position: relative;
+}
+.search-category-container {
+  position: absolute;
+  left: 5px;
+  top: 10%;
+}
+.search-category-container select {
+  border-radius: 20px 0 0 20px;
+  border: none;
+  background: #B31312;
+  color: #ffffff;
+  line-height: normal;
+  font-size: 12px;
+  padding: 5px 10px 5px 10px;
+}
+a:hover {
+  color: unset!important;
+  text-decoration: underline;
+}
+.search-bar-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.search-bar-container input[type="text"] {
+  width: 100%;
+  height: 35px;
+  font-size: 13px;
+  border-radius: 20px 0 0 20px;
+  padding: 0 0 0 33%;
+  color: #2B2A4C;
+  background: #ffffff;
+}
+button.btn.btn-primary.search-btn {
+  height: 35px;
+  line-height: normal;
+  margin-left: 10px;
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #B31312;
+  border-radius: 0 10px 10px 0;
+  font-size: 14px;
+  padding: 5px 15px;
+}
+input[type="text"]:focus-visible {
+  outline: none;
+  border: 0;
+}
 header h1 {
   margin: 0;
 }
 
 nav ul {
   list-style: none;
+  margin: 0;
+  display: inline-flex;
+  gap: 20px;
 }
 
 nav ul li {
@@ -92,7 +150,7 @@ footer {
 }
 
 header {
-  background-color: #333;
+  background-color: #2B2A4C;
   color: #fff;
   padding: 20px;
 }
@@ -164,15 +222,13 @@ footer {
   line-height: 1.8;
 }
 
-h1.site-logo {
-  margin-bottom: 15px;
-}
 
 .site-logo a {
   text-decoration: none;
-  color: #333;
-  background-color: #fff;
+  color: #ffffff;
+  background-color: #B31312;
   border-radius: 10px;
+  font-size: 20px;
   padding: 5px 10px;
 }
 
@@ -181,26 +237,30 @@ h1.site-logo {
   position: relative;
 }
 
+
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #333;
-  min-width: 470px;
+  background-color: #b31312;
+  color: #ffffff;
+  top: 100%;
   z-index: 1;
 }
-
 .dropdown-content a {
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+  width: 100%;
+  min-width: 150px;
+  padding: 5px;
 }
-
+.dropdown-content a:hover {
+  background: #2B2A4C;
+  color: #fff;
+  text-decoration: none;
+}
 .dropdown:hover .dropdown-content {
   display: flex;
   flex-wrap: wrap;
-  /* max-width: 130px; */
-  /* left: -100%; */
+  padding: 10px 0;
+  text-align: center;
   justify-content: space-evenly;
 }
 .error-message {
